--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href=style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ashthornton/asscroll@2.0.5/css/index.css">
@@ -30,8 +30,8 @@
                     <div class="container">
                         <div class="itemcontainer">
                             <div class="item">
-                                <img src="/Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" alt="">
-                                <a href="/About.html"><img src="/Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg"
+                                <img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" alt="">
+                                <a href="About.html"><img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg"
                                         class="about" alt=""></a>
                             </div>
                             <div class="info">
@@ -40,8 +40,8 @@
                             </div>
                         </div>
                         <div class="itemcontainer">
-                            <div class="item"><img src="/Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" alt="">
-                                <a href="/contact.html"><img src="/Images/rawkkim-4kt3VTFcZ88-unsplash.jpg"
+                            <div class="item"><img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" alt="">
+                                <a href="contact.html"><img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg"
                                         class="contact" alt=""></a>
                             </div>
                             <div class="info">
@@ -51,8 +51,8 @@
                         </div>
 
                         <div class="itemcontainer">
-                            <div class="item"><img src="/Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" alt="">
-                                <a href="/services.html"><img src="/Images/jr-korpa-QVwq0V_ng98-unsplash.jpg"
+                            <div class="item"><img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" alt="">
+                                <a href="services.html"><img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg"
                                         class="services" alt=""></a>
                             </div>
                             <div class="info">
