--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <div class="itemcontainer">
                             <div class="item">
                                 <img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" alt="">
-                                <a href="About.html"><img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg"
+                                <a href="about.html"><img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg"
                                         class="about" alt=""></a>
                             </div>
                             <div class="info">
