working on css2

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
             <div data-barba="container" data-barba-namespace="home" data-scroll-container>
                 <div asscroll-container>
                     <div class="fullscreen"></div>
+                    <div class="textwrapper">
+                        <h1 class="ml6 hometitle">
+                            <span class="text-wrapper">
+                                <span class="letters">FANCY</span>
+                            </span>
+                        </h1>
 
-                    <h1 class="ml6 hometitle">
-                        <span class="text-wrapper">
-                            <span class="letters">FANCY</span>
-                        </span>
-                    </h1>
+                    </div>
                     <div class="container">
                         <div class="itemcontainer">
                             <div class="item">
