working on css3

--- a/index.html
+++ b/index.html
@@ -19,51 +19,51 @@
     <div data-barba="wrapper">
         <div id="viewport">
             <div data-barba="container" data-barba-namespace="home" data-scroll-container>
-                <div asscroll-container>
+                <div class="fullscreenwrapper">
                     <div class="fullscreen"></div>
-                    <div class="textwrapper">
-                        <h1 class="ml6 hometitle">
-                            <span class="text-wrapper">
-                                <span class="letters">FANCY</span>
-                            </span>
-                        </h1>
+                </div>
+                <div class="textwrapper">
+                    <h1 class="ml6 hometitle">
+                        <span class="text-wrapper">
+                            <span class="letters">FANCY</span>
+                        </span>
+                    </h1>
 
+                </div>
+                <div class="container">
+                    <div class="itemcontainer">
+                        <div class="item">
+                            <img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" alt="">
+                            <a href="about.html"><img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg"
+                                    class="about" alt=""></a>
+                        </div>
+                        <div class="info">
+                            <p>About</p>
+                            <p>/01</p>
+                        </div>
                     </div>
-                    <div class="container">
-                        <div class="itemcontainer">
-                            <div class="item">
-                                <img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" alt="">
-                                <a href="about.html"><img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg"
-                                        class="about" alt=""></a>
-                            </div>
-                            <div class="info">
-                                <p>About</p>
-                                <p>/01</p>
-                            </div>
+                    <div class="itemcontainer">
+                        <div class="item"><img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" alt="">
+                            <a href="contact.html"><img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" class="contact"
+                                    alt=""></a>
                         </div>
-                        <div class="itemcontainer">
-                            <div class="item"><img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" alt="">
-                                <a href="contact.html"><img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg"
-                                        class="contact" alt=""></a>
-                            </div>
-                            <div class="info">
-                                <p>Contact</p>
-                                <p>/02</p>
-                            </div>
+                        <div class="info">
+                            <p>Contact</p>
+                            <p>/02</p>
                         </div>
-
-                        <div class="itemcontainer">
-                            <div class="item"><img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" alt="">
-                                <a href="services.html"><img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg"
-                                        class="services" alt=""></a>
-                            </div>
-                            <div class="info">
-                                <p>Services</p>
-                                <p>/03</p>
-                            </div>
-                        </div>
-
                     </div>
+
+                    <div class="itemcontainer">
+                        <div class="item"><img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" alt="">
+                            <a href="services.html"><img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" class="services"
+                                    alt=""></a>
+                        </div>
+                        <div class="info">
+                            <p>Services</p>
+                            <p>/03</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
