--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,16 @@
                 <div asscroll-container>
                     <div class="about">
                         <div class="imagecontainer">
+                            <div class="homelink">
+                                <a href="index.html">Home</a>
+                            </div>
                             <div class="pagetitle">
                                 <h1 id="title">CONTACT</h1>
                             </div>
                             <img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" alt="">
+                            <div class="scrolldown">
+                                <h1>SCROLL DOWN</h1>
+                            </div>
                         </div>
                         <div class="textcontainer">
                             <h2>Lorem Ipsum</h2>
