--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <div data-barba="wrapper">
         <div data-barba="container" data-barba-namespace="about" data-scroll-container>
-            <div asscroll-container>
+            <div id="viewport">
                 <div class="about">
                     <div class="imagecontainer">
                         <div class="homelink">
