--- a/index.html
+++ b/index.html
@@ -18,58 +18,60 @@
 <body>
     <div data-barba="wrapper">
         <div data-barba="container" data-barba-namespace="home" data-scroll-container>
-            <div class="fullscreen">
-                <!-- <img class="fake" src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" alt=""> -->
-            </div>
+            <div id="viewport">
+                <div class="fullscreen">
+                    <!-- <img class="fake" src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" alt=""> -->
+                </div>
 
-            <div class="textwrapper">
-                <h1 class="ml6 hometitle">
-                    <span class="text-wrapper">
-                        <span class="letters">FANCY</span>
-                    </span>
-                </h1>
+                <div class="textwrapper">
+                    <h1 class="ml6 hometitle">
+                        <span class="text-wrapper">
+                            <span class="letters">FANCY</span>
+                        </span>
+                    </h1>
 
-            </div>
-            <div class="container">
-                <div class="itemcontainer">
-                    <a href="about.html">
-                        <div class="item" id="item">
-                            <img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" class="img" id="img" alt="">
+                </div>
+                <div class="container  ">
+                    <div class="itemcontainer">
+                        <a href="about.html">
+                            <div class="item" id="item">
+                                <img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" class="img" id="img" id=" "
+                                    alt="">
+                            </div>
+                        </a>
+                        <div class="info">
+                            <p>About</p>
+                            <p>/01</p>
                         </div>
-                    </a>
-                    <div class="info">
-                        <p>About</p>
-                        <p>/01</p>
                     </div>
-                </div>
-                <div class="itemcontainer">
-                    <a href="contact.html"></a>
-                    <div class="item">
-                        <img class="one" src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" alt="">
-                        <img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" class="contact two" alt="">
+                    <div class="itemcontainer">
+                        <a href="contact.html"></a>
+                        <div class="item ">
+                            <img class="class " src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" alt="">
+                            <img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" class="contact two" id=" " alt="">
+                        </div>
+                        </a>
+                        <div class="info">
+                            <p>Contact</p>
+                            <p>/02</p>
+                        </div>
                     </div>
-                    </a>
-                    <div class="info">
-                        <p>Contact</p>
-                        <p>/02</p>
+
+                    <div class="itemcontainer">
+                        <a href="services.html"></a>
+                        <div class="  item "><img class="one" src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" alt="">
+                            <img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" class="services two" alt="">
+                        </div>
+                        </a>
+                        <div class="info">
+                            <p>Services</p>
+                            <p>/03</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="itemcontainer">
-                    <a href="services.html"></a>
-                    <div class="item"><img class="one" src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" alt="">
-                        <img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" class="services two" alt="">
-                    </div>
-                    </a>
-                    <div class="info">
-                        <p>Services</p>
-                        <p>/03</p>
-                    </div>
-                </div>
             </div>
-
         </div>
-    </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
