--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                     <div class="itemcontainer">
                         <a href="about.html">
                             <div class="item" id="item">
-                                <img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" class="img" id="img" id=" "
-                                    alt="">
+                                <img src="Images/1.jpg" class="img" id="img" id=" " alt="">
                             </div>
                         </a>
                         <div class="info">
@@ -47,8 +46,8 @@
                     <div class="itemcontainer">
                         <a href="contact.html"></a>
                         <div class="item ">
-                            <img class="class " src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" alt="">
-                            <img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" class="contact two" id=" " alt="">
+                            <img class="class " src="Images/2.jpg" alt="">
+                            <img src="Images/2.jpg" class="contact two" id=" " alt="">
                         </div>
                         </a>
                         <div class="info">
@@ -59,8 +58,8 @@
 
                     <div class="itemcontainer">
                         <a href="services.html"></a>
-                        <div class="  item "><img class="one" src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" alt="">
-                            <img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" class="services two" alt="">
+                        <div class="  item "><img class="one" src="Images/3.jpg" alt="">
+                            <img src="Images/3.jpg" class="services two" alt="">
                         </div>
                         </a>
                         <div class="info">
