--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
                             <div class="pagetitle">
                                 <h1 id="title">SERVICES</h1>
                             </div>
-                            <img src="Images/jr-korpa-QVwq0V_ng98-unsplash.jpg" alt="">
+                            <img src="Images/3.jpg" alt="">
                             <div class="scrolldown">
                                 <h1>SCROLL DOWN</h1>
                             </div>
