--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                         <div class="pagetitle">
                             <h1 id="title">ABOUT</h1>
                         </div>
-                        <img src="Images/christian-wiebel-t-wkww9Gt1U-unsplash.jpg" alt="">
+                        <img src="Images/1.jpg" alt="">
                         <div class="scrolldown">
                             <h1>SCROLL DOWN</h1>
                         </div>
