--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                             <div class="pagetitle">
                                 <h1 id="title">CONTACT</h1>
                             </div>
-                            <img src="Images/rawkkim-4kt3VTFcZ88-unsplash.jpg" alt="">
+                            <img src="Images/2.jpg" alt="">
                             <div class="scrolldown">
                                 <h1>SCROLL DOWN</h1>
                             </div>
